Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19128

Key column in CMake variable table truncated and can't be resized

XMLWordPrintable

      With the new improved table of CMake variables in the build settings (nice!) it seems the Key column gets truncated and can't be resized, so I can't see the full variable names.

      See attached screenshot.

        1. truncated-column.png
          52 kB
          Elvis Stansvik
        For Gerrit Dashboard: QTCREATORBUG-19128
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            estan Elvis Stansvik
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes