CMake: Fix header size in CMake configuration view

Stretch the first column, not the second:-/

Task-number: QTCREATORBUG-19128
Change-Id: I0d2e945b14b83d5449af50016fb2ef6ad19da871
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>